--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="intro.css">
         <script src="script.js"></script>
-
+        <link rel="stylesheet" href="https://use.typekit.net/ajv7jgq.css">
     </head>
 
     <body>
         <img class="welcome"src="./images/Website Banner.png" alt="Welcome">
-        <div class="book"></div>
+        <div class="text">
+            <p>
+                take it...
+                <br>
+                the book...
+            </p>
+        </div>
+        <div class="book" onclick="location.href='./book.html'"></div>
     </body>
 
 </html>
