--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <img class="welcome"src="./images/Website Banner.png" alt="Welcome">
         <div class="text">
             <p>
-                take it...
+                welcome...
                 <br>
-                the book...
+                take the book...
             </p>
         </div>
-        <div class="book" onclick="location.href='./book.html'"></div>
+        <div class="book" onclick="location.href='./cover.html'"></div>
     </body>
 
 </html>
