--- a/about.html
+++ b/about.html
@@ -30,19 +30,17 @@
 
                     </div>
                     <div class="content-right">
-                        <div class="header upper"></div>
+                        <div class="header upper">Socials</div>
                         <div class="links">
-                            <div style="display:inline-block" class="subheader">
-                                <div class="topic"></div>
+                            <div style="display:inline-block" class="subheader contact">
+                                <div>Contact me at: <a href = "mailto: seantoveydesign@gmail.com">seantoveydesign@gmail.com</a></div>
                             </div>
-                            <br>
-                            <div style="display:inline-block" class="cardlesstext">
-                                <div class="topic"></div>
+                            <div class="socials">
+                                <img class="pic" src="./images/twitter.png" alt="twitter-logo" onclick="parent.open('https://twitter.com/SeanToveyDesign')">
+                                <img class="pic" src="./images/insta.png" alt="insta-logo" onclick="parent.open('https://www.instagram.com/seantoveydesign/')">
+                                <img class="pic" src="./images/itch.png" alt="itch-logo" onclick="parent.open('https://sean-tovey.itch.io/')">
                             </div>
                         </div>
-                        <p>
-                            
-                        </p>
                     </div>
                 </div>
                 <div class="right-sidebar">
