--- a/about.html
+++ b/about.html
@@ -17,7 +17,16 @@
                         <div class="header upper">About Me</div>
                         <div class="links">
                             <div style="display:inline-block" class="subheader">
-                                <div class="topic"></div>
+                                <div class="topic paragraph">
+                                    Hi! I'm Sean, I make games and interactive experiences using 3D modeling and sometimes through websites. I focus mostly on 3D modeling but I often use skills from other fields to create something that lines up with my vision. 
+                                    I am from the US and am currently a third year student at RMIT studying for a Bachelor of Design in Digital Media. 
+                                    Here you can see some of the projects I made over the course of my three years. I have an interest in narrative focused games and I enjoy creating new worlds with atmospheric environments. 
+                                    I draw a lot of inspiration from older role playing games and want to capture the feeling of adventure and mystery I get from them in my works. 
+                                    I love learning new skills and collaborating with people from different disciplines to create projects I can’t do alone. 
+                                    My favorite projects are ones that require me to think outside the box in order to deliver an immersive experience. 
+                                    I care deeply about the future and many of my projects speculate on how today’s technology and beliefs will affect the future of humanity. 
+                                    Feel free to check out my socials or contact me at my email address if you want to collaborate.
+                                </div>
                             </div>
                             <br>
                             <div style="display:inline-block" class="cardlesstext">
